[package]
name = "unique-pointer"
version = "0.4.2"
edition = "2024"
description = "Provides the `UniquePointer` data structure that makes extensive use of `unsafe` rust to provide a shared pointer across other data structures."
documentation = "https://docs.rs/unique-pointer"
readme = "README.md"
homepage = "https://github.com/gabrielfalcao/unique-pointer"
license = "MIT"
keywords = ["rust", "memory", "library"]
authors = ["Gabriel DeMoura <gabrielteratos@gmail.com>"]
categories = ["algorithms", "data-structures"]

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]


[features]
debug = []
null-check = []

[lib]
name = "unique_pointer"
path = "src/lib.rs"
bench = false


[dev-dependencies]
k9 = "0.12.0"
